# libsiridb

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  makefile.targets
Debug/: makefile  objects.mk
Debug/src/: conn.d  errmap.d  handle.d  imap.d  main.d  packer.d  pkg.d  resp.d  series.d  siridb.d  siridbuv.d  subdir.mk  thread.d  uvwrap.d
Release/: makefile
Release/src/: subdir.mk
cmake/: siridb-config.cmake.in  version.h.in
include/: conn.h  errmap.h  handle.h  imap.h  packer.h  pkg.h  point.h  protomap.h  queue.h  req.h  resp.h  series.h  siridb.h  siridbuv.h  thread.h  uvwrap.h  version.h
libuv_example/: README.md  main.c  suv.c  suv.h
livuv_example/: README.md  _main.c  main.c  suv.c  suv.h
src/: conn.c  errmap.c  handle.c  imap.c  main.c  packer.c  pkg.c  queue.c  req.c  resp.c  series.c  siridb.c  siridbuv.c  thread.c  uvwrap.c  version.c
